Sat Dec 02 21:49:34 2000  George Lebl <jirka@5z.com>

	* session.c:  apparently reading /proc/apm can crash on some
	  laptops with rh7, so since that would be mucho bad, we fork
	  during the check.  Ugly you say?  Yes, but it works.

Thu Nov 30 14:05:56 2000  George Lebl <jirka@5z.com>

	* panel.hints: Translate two entries to Czech while trying to
	  procrastinate and not do homework which I need to get done.

Tue Nov 28 02:19:34 2000  George Lebl <jirka@5z.com>

	* session.c, menu.c, gnome-panel-properties.c, panel_config_global.h,
	  menu-fentry.c:  Add an option for automatic rereading of menus for
	  slower machines, and add a menu item for rereading menus if it's
	  turned off.

Tue Nov 28 00:45:55 2000  George Lebl <jirka@5z.com>

	* applet.c, distribution.c, foobar-widget.c, gnome-run.c,
	  launcher.c, main.c, menu-fentry.[ch], panel-util.[ch],
	  menu-properties.c, menu-rh.c, menu-util.c, menu.c,
	  panel-widget.c, panel.c, session.c, swallow.c:  Check for
	  try execs on menu reread so that we notice newly installed
	  software.  Might have to make this whole checking thing an
	  option for people on slower machines.  Also put in routines
	  stolen from gnome-libs head for checking for programs and file
	  existance as they are faster.

Fri Nov 24 22:24:04 2000  George Lebl <jirka@5z.com>

	* basep-widget.c, foobar-widget.c: fixup basep to use default
	  handlers instead of signal connection.  Add autoraise to foobar.

Tue Nov 21 21:28:00 2000  George Lebl <jirka@5z.com>

	* gnome-run.c: add support for launching "man:" "info:", "file:"
	  and "ghelp:" URLs directly from the runbox

2000-11-19  Karl Eichwalder  <ke@suse.de>

	* extern.c (extern_before_remove): Adjust message string.
	* swallow.c (before_remove): Fix typo.

Thu Nov 16 21:45:38 2000  George Lebl <jirka@5z.com>

	* applet.c, session.c, swallow.[ch]:  Remove bits of cruft.  Add the
	  applet like reload hack for swallowed thingies.  Also fix a